# devpod

./: biome.json  go.mod  go.sum
cmd/agent/container/: credentials_server.go
desktop-new/: README.md  components.json  package-lock.json  package.json  svelte.config.js  tsconfig.json  vite.config.ts
desktop-new/src/: app.css  app.html
desktop-new/src-tauri/: Cargo.toml  tauri.conf.json
desktop-new/src-tauri/capabilities/: default.json
desktop-new/src-tauri/src/: events.rs  main.rs  tray.rs
desktop-new/src-tauri/src/commands/: contexts.rs  logs.rs  machines.rs  providers.rs  system.rs
desktop-new/src-tauri/src/daemon/: cli.rs  types.rs  watcher.rs
desktop-new/src-tauri/src/persistence/: audit.rs  logs.rs
desktop-new/src/lib/ipc/: commands.ts  mock.ts
desktop-new/src/lib/stores/: contexts.ts  machines.ts  providers.ts  settings.ts  terminal-instances.ts  toasts.ts  workspaces.ts
desktop-new/src/lib/types/: index.ts
desktop-new/src/routes/: +error.svelte  +layout.svelte  +page.svelte
desktop-new/src/routes/(app)/: +layout.svelte  +page.svelte
desktop-new/src/routes/contexts/: +page.svelte
desktop-new/src/routes/machines/: +page.svelte
desktop-new/src/routes/providers/: +page.svelte
desktop-new/src/routes/settings/: +page.svelte
desktop-new/src/routes/splashscreen/: +layout.svelte  +page.svelte
pkg/agent/tunnelserver/: tunnelserver.go
pkg/devcontainer/setup/: setup.go
pkg/gitcredentials/: gitcredentials.go  gitcredentials_test.go
pkg/gitsshsigning/: utils.go  utils_test.go
pkg/tunnel/: services.go  services_test.go
(+69 files in other folders)
